Fixed collapsing for fixed-sized components.

--- a/PortalLayout/addon/src/main/java/org/vaadin/addon/portallayout/portal/test.css
+++ b/PortalLayout/addon/src/main/java/org/vaadin/addon/portallayout/portal/test.css
@@ -9,7 +9,7 @@
 
 .v-portlet .v-portlet-content-wrapper {
 	overflow: hidden;
-	top : 30px;
+	top : 28px;
 	bottom: 0;
 	left: 0;
 	right: 0;
@@ -27,6 +27,10 @@
 	left: 0;
 }
 
+.v-portlet.collapsed .v-portlet-content-wrapper {
+	visibility: hidden;
+}
+
 .v-portlet {
 	position: relative;
 	width: 100%;
@@ -35,6 +39,7 @@
 
 .v-portlet .v-portlet-header {
 	color: #FFFFFF;
+	overflow: hidden;
 }
 
 .v-portlet .v-portlet-header .v-captiontext {
